@@ -604,12 +604,12 @@ The following eprint has been deleted from your User Area:
 
     <epp:phrase id="cgi/users/edit_eprint:staff_item_is_in_inbox">This item is still in the users work area.</epp:phrase>
     <epp:phrase id="cgi/users/edit_eprint:staff_item_is_in_buffer">This item is in editorial review. It will not appear in the repository until it has been approved by an editor.</epp:phrase>
-    <epp:phrase id="cgi/users/edit_eprint:staff_item_is_in_archive">This item is in the repository.</epp:phrase>
+    <epp:phrase id="cgi/users/edit_eprint:staff_item_is_in_archive">This item is in the repository with the URL<br /><epc:pin name="link"><epc:pin name="url" /></epc:pin></epp:phrase>
     <epp:phrase id="cgi/users/edit_eprint:staff_item_is_in_deletion">This item has been retired from the repository.</epp:phrase>
 
     <epp:phrase id="cgi/users/edit_eprint:item_is_in_inbox">This item is still in your work area. It will not appear in the repository until you deposit it.</epp:phrase>
     <epp:phrase id="cgi/users/edit_eprint:item_is_in_buffer">This item is in editorial review. It will not appear in the repository until it has been checked by an editor.</epp:phrase>
-    <epp:phrase id="cgi/users/edit_eprint:item_is_in_archive">This item is in the repository.</epp:phrase>
+    <epp:phrase id="cgi/users/edit_eprint:item_is_in_archive">This item is in the repository with the URL<br /><epc:pin name="link"><epc:pin name="url" /></epc:pin></epp:phrase>
     <epp:phrase id="cgi/users/edit_eprint:item_is_in_deletion">This item has been retired from the repository.</epp:phrase>
 
     <epp:phrase id="cgi/users/edit_eprint:message_message">Message</epp:phrase>
@@ -1209,6 +1209,7 @@ Titles and Help for the System Fields
 	<epp:phrase id="Plugin/InputForm/Component/Upload:delete_document">Delete document</epp:phrase>
 	<epp:phrase id="Plugin/InputForm/Component/Upload:delete_document_confirm">Delete entire document: are you sure?</epp:phrase>
 	<epp:phrase id="Plugin/InputForm/Component/Upload:upload_blurb">Please upload a file.</epp:phrase>
+	<epp:phrase id="Plugin/InputForm/Component/Upload:update">Update Document</epp:phrase>
 	<epp:phrase id="Plugin/InputForm/Component/Upload:add_files"><epc:pin name="link">Need to add additional files to this document?</epc:pin></epp:phrase>
 	<epp:phrase id="Plugin/InputForm/Component/Upload:really_add">Wait! Are you really sure you want to add another file to this document? Only do this if the file is directly required by the document. For example an image required by an HTML document. If you are sure you want to then click OK. Most of the time you want to click Cancel then use the New Document field above.</epp:phrase>
 	<epp:phrase id="Plugin/InputForm/Component/Upload:really_next">Wait! You have selected a file to upload but not actually uploaded it. Do you wish to continue without uploading the file?</epp:phrase>
